--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
 	"cleanUrls": true,
-	"trailingSlash": false,
-	"functions": {
-		"vercel/handler.go": {
-			"runtime": "vercel/go@latest"
-		}
-	}
+	"trailingSlash": false
 }
