chore: try new vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,30 @@
 {
-	"builds": [
+	"public": "true",
+	"rewrites": [
 		{
-			"src": "api/main.go",
-			"use": "@vercel/go@latest",
-			"config": {
-				"runtime": "go1.22.x"
-			}
+			"source": "/assets/(.*)",
+			"destination": "/assets/$1"
+		},
+		{
+			"source": "/assets/icons/(.*)",
+			"destination": "/assets/icons/$1"
+		},
+		{
+			"source": "/assets/images/(.*)",
+			"destination": "/assets/images/$1"
+		},
+		{
+			"source": "/assets/js/(.*)",
+			"destination": "/assets/js/$1"
+		},
+		{
+			"source": "/(.*)",
+			"destination": "/vercel/handler.go"
 		}
 	],
-	"routes": [
-		{
-			"src": "/assets/?(.*)",
-			"dest": "/static/$1"
-		},
-		{
-			"src": "/assets/icons/?(.*)",
-			"dest": "/icons/$1"
-		},
-		{
-			"src": "/assets/images/(.*)",
-			"dest": "/images/$1"
-		},
-		{
-			"src": "/assets/js/(.*)",
-			"dest": "/assets/js/$1"
-		},
-		{
-			"src": "/(.*)",
-			"dest": "vercel/handler.go"
+	"functions": {
+		"vercel/handler.go": {
+			"runtime": "vercel-go@0.5.2"
 		}
-	]
+	}
 }
