--- a/.air.toml
+++ b/.air.toml
@@ -4,7 +4,7 @@ tmp_dir = "tmp"
 
 [build]
 args_bin = []
-bin = "./tmp/app"
+bin = "./tmp/app.exe"
 cmd = "make build"
 delay = 1000
 exclude_dir = ["assets", "tmp", "vendor", "testdata", "public"]
@@ -12,7 +12,7 @@ exclude_file = []
 exclude_regex = ["_test.go", "_templ.go"]
 exclude_unchanged = false
 follow_symlink = false
-full_bin = "./tmp/app"
+full_bin = "./tmp/app.exe"
 include_dir = []
 include_ext = ["go", "tpl", "tmpl", "templ", "html"]
 include_file = []
